--- a/about/about-me.html
+++ b/about/about-me.html
@@ -1,4 +1,18 @@
 <!DOCTYPE html> <html><head>
+	<header>
+        <h1>Chris' Cyber Garden</h1>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Home</a></li>
+                <li><a href="/about/about-me.html">About Me</a></li>
+                <li><a href="/about/build-for-my-website.html">Build for this website</a></li>
+                <li><a href="/about/how-to-use-this-website.html">How to Navigate this Website</a></li>
+                <li><a href="/selfcreated.html">Self Created Pages</a></li>
+                <li><a href="/about/writeup-created-by-info.html">Contact</a></li>
+
+            </ul>
+        </nav>
+    </header>
 		<title>About Me</title>
 		<base href="../">
 		<meta id="root-path" root-path="../">
@@ -28,3 +42,12 @@ GitHub: <a rel="noopener nofollow" class="external-link" href="https://github.co
 			<canvas id="graph-canvas" class="hide" width="512px" height="512px"></canvas>
 		</div>
 		</div></div><div class="tree-container mod-root nav-folder tree-item outline-tree" data-depth="0"><div class="tree-header"><span class="sidebar-section-header">Table Of Contents</span><button class="clickable-icon collapse-tree-button is-collapsed" aria-label="Collapse All"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></svg></button></div><div class="tree-scroll-area tree-item-children nav-folder-children"><div class="tree-item mod-tree-folder nav-folder mod-collapsible is-collapsed" style="display: none;"></div><div class="tree-item" data-depth="1"><a class="tree-link" href="about\about-me.html#About Me"><div class="tree-item-contents heading-link" heading-name="About Me"><span class="tree-item-title">About Me</span></div></a><div class="tree-item-children nav-folder-children"></div></div></div></div></div><script defer="">let rs = document.querySelector(".sidebar-right"); rs.classList.add("is-collapsed"); if (window.innerWidth > 768) rs.classList.remove("is-collapsed"); rs.style.setProperty("--sidebar-width", localStorage.getItem("sidebar-right-width"));</script></div></div></body></html>
+		<footer>
+			<p>&copy; 2024 Chris Adams. All rights reserved.</p>
+			<nav>
+				<ul>
+					<li><a href="/terms-and-conditions.html">Terms of Service</a></li>
+					<li><a href="/about/writeup-created-by-info.html">Contact</a></li>
+				</ul>
+			</nav>
+		</footer>
